# Projects

./: .gitignore  README.md
Befunge/: fib-seq.b98
C++/Math/: all-perfect-squares.cpp  aps.cpp  cpp_math_suite.cpp  fib.cpp
C++/Math/3x+1/: 3x+1.cpp
C++/Math/3x_plus_1/: 3x+1.cpp
C++/Math/all perfect squares/: aps.cpp
C++/Math/fib/: fib.cpp
C++/Math/perfect-squares/: perfect-squares.cpp
C++/Math/primes/: primes-but-small.cpp  primes.cpp  primes_WIP.cpp
C++/Math/quadratic/: quadratic.cpp
C++/Math/shortest-hello-world/: h.cpp  h.h
C++/dependencies/: infint.h
HTML/test/: test.html
JS/: test-addition-script.js
Python/: class_test_NOT_WORKING.py  every-utf-8.py  goodbye_ram.py  ss14-auto-join.py
Python/Math/: aps.py  fib.py
Python/paperclips/: paperclips.py
Rust/guessing-game/src/: main.rs
Rust/input-test/src/: main.rs
Rust/math/dec-to-frac/: Cargo.toml
Rust/math/factors/: Cargo.toml
Rust/math/fibonacci/: Cargo.toml
Rust/math/quadratic/: Cargo.toml
Rust/math/quick-dec-to-frac/: Cargo.toml
Rust/math/radical-simplifier/: Cargo.toml
Rust/math/tuple_fib/: Cargo.toml
Rust/net/message-client/: Cargo.toml
Rust/net/rocket-test/: Cargo.toml
Rust/net/webtest/: Cargo.toml  run.bat
Rust/net/webtree/: Cargo.toml
Rust/testing/infinite-memory/: Cargo.toml
Rust/tutorials/gui/: Cargo.toml
clojure/: main.clj
clojure/factors/: deps.edn
clojure/mergesort/: deps.edn
haskell/factors/: factors.cabal
haskell/factors/app/: Main.hs
haskell/fib/: fib.cabal
haskell/mergesort/: mergesort.cabal
haskell/mergesort/app/: Main.hs
haskell/three-x-plus-one/: three-x-plus-one.cabal
haskell/three-x-plus-one/app/: Main.hs
lua/add-x-and-y/: main.lua
octorocket/Python/: class_test_NOT_WORKING.py
python/: ss14-auto-join.py
rust/orios-chip/prime-display/: Cargo.toml
rust/orios-chip/prime-display/src/: main.rs
shared/JS/: sussy.js
shell/: midi-to-key.sh  rng-audio-to-color.fish
uiua/: factors.ua  main.ua
(+161 files in other folders)
