cabal-version:   3.0
name:            mergesort
version:         0.1.0.0
license:         NONE
author:          OctoRocket
maintainer:      xteamxeno@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable mergesort
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
