cabal-version:   3.0
name:            three-x-plus-one
version:         0.1.0.0
license:         NONE
author:          OctoRocket
maintainer:      xteamxeno@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable three-x-plus-one
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
